public/css/search.css
#run-report-routes .nav-item{
    text-decoration: underline;
}

.form-check input:checked {
    background-color: #9A0000;
    border-color: #9A0000;
}

#search-bar{
    border: 1px solid #DFE2E6;
    border-radius: 1.8em;
    background-color: #F4F4F4;
    margin-bottom: 2.5em;
}

#search-bar *{
    border-top: none;
    border-bottom: none;
    
}

#search-bar select, #search-bar input, #search-bar span{
    background-color: #F4F4F4;
}

#search-bar-head{
    border-radius: 1.8em 0 0 1.8em;
    border-left: none;
    height: 3em;
}

#search-bar-icon-head{
    filter: brightness(0) saturate(100%) invert(76%) sepia(7%) saturate(0%) hue-rotate(192deg) brightness(94%) contrast(96%);
    margin: 0 0em 0 0.5em;
}

#search-btn{
    border-radius: 1.8em;
    background-color: #9A0000;
    border: 1px solid #9A0000;
    color: white;
    /* font-size: 0.9rem; */
}

#search-bar-icon {
    filter: brightness(0) saturate(100%) invert(99%) sepia(0%) saturate(5%) hue-rotate(123deg) brightness(102%) contrast(102%);;
}

#searchinput{
    border-left: none;
    padding-left: none;
    width: 12%;
}

#license-dropdown{
    border-right: none;
}

#search-table-details p, #run-reports p{
    padding: 0;
    margin: 0;
}

#run-reports button{
    font-weight: 500;
    text-decoration: none;
    color: #9A0000;
}

#search-pagination i{
    font-weight: 400;
    color: #474747;
}

#search-pagination p{
    color: #888888;
    font-size: 0.8em;
}

.arrow{
    height: 1em;
    margin: 0;
    padding: 0;
}

.end-page{
    filter: brightness(0) saturate(100%) invert(98%) sepia(65%) saturate(6736%) hue-rotate(183deg) brightness(125%) contrast(74%);
}

.not-end-page{
    filter: brightness(0) saturate(100%) invert(66%) sepia(77%) saturate(1300%) hue-rotate(360deg) brightness(104%) contrast(105%);
}

#run-reports{
    color: #B20435;
}

/* report arrow */
.report-arrow{
    filter: brightness(0) saturate(100%) invert(12%) sepia(84%) saturate(7477%) hue-rotate(339deg) brightness(70%) contrast(98%);
}

#search-table tr td:nth-child(4), #search-table tr th:nth-child(4){
    padding-right: 0;
}

#search-table tr td:nth-child(5), #search-table tr th:nth-child(5){
    padding-left: 0;
}

.modal-body .form-check{
    margin: 0 auto;
}

.modal-footer button{
    margin: 0 auto;
}



#runReportModalBtn{
    background-color: #9A0000;
    border: 1px solid #9A0000;
    color: white;
    width: 90%;
    padding: 0.6em;
}

